# jobber-init

./: .env-example  .env.example  .gitignore  README.md  main.py  pyproject.toml
jobber/core/: playwright_manager.py  prompts.py  system_orchestrator.py
jobber/core/agents/: base.py  browser_nav_agent.py  planner_agent.py
jobber/core/memory/: ltm.py
jobber/core/skills/: click_using_selector.py  enter_text_and_click.py  enter_text_using_selector.py  get_dom_with_content_type.py  open_url.py  pdf_text_extractor.py  press_key_combination.py  upload_file.py
jobber/log_files/: json_accessibility_dom.json  json_accessibility_dom_enriched.json  text_only_dom.txt
jobber/user_preferences/: user_preferences.txt
jobber/utils/: dom_mutation_observer.py  extract_json.py  logger.py
